fix tx footer alignment

--- a/app/App/Account/Account/Requests/style/index.styl
+++ b/app/App/Account/Account/Requests/style/index.styl
@@ -557,11 +557,12 @@
     font-weight 400
     text-transform uppercase
     letter-spacing 2px
-    margin-top 8px
     white-space normal
     display flex
     justify-content center
     align-items center
+    margin-top 0px
+    margin-bottom 44px
     
   .cancelRequest
     margin-top 16px
